2020-09-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Add function documentation:

        * set_last_command
        * i_command_dispatch

2020-09-26 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/el.po: Update Greek translations
    * po/es.po: Update Spanish translations.
    * po/fa.po: Update Persian translations.
    * po/fi.po: Update Finnish translations.
    * po/fr.po: Update French translations.
    * po/it.po: Update Italian translations.

2020-09-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_confirm_close.c: Revise confirm_close_dialog_constructor to
      create button for the action area seperately so that tooltips can be
      added.

2020-09-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_confirm_close.c: Revise confirm_close_dialog_constructor; wait
      until widgets are assembled before showing. Revise close confirmation
      message.

    * src/x/x_settings_dialog.c: Add missing mnemonic to the save button.

2020-09-22 Wiley E. Hill <wileyhill@gmail.com>

    * include/x_settings.h: Enumerate AutoPan.

    * include/x_settings_dialog.h: Add AutoPanSwitch to DialogStrings.

    * src/iface/i_window.c: Add function documentation:

        * i_window_set_grid_type

    * src/x/x_settings.c: Revise configure_dialog_response to update the
      AUTO_PAN_TOGGLE menu item.

    * src/x/x_settings_dialog.c: Add switch for auto_pan option on the Windows
      tab.

    * templates/schematic.sch.in: Add a titleblock to the template schematic.

2020-09-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_window.c: Add function documentation:

        * x_window_reset_page_geometry

2020-09-19 Wiley E. Hill <wileyhill@gmail.com>

    * po/he.po: Update Hebrew translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.